Completed the markup and css for the game grid.

--- a/index.html
+++ b/index.html
@@ -14,15 +14,19 @@
         <img src="./img/icons/icon-logo-small.svg" alt="Quench the flames logo">
     </div>
     <div class="game-grid">
-        <div class="game-box-1">1</div>
-        <div class="game-box-2">2</div>
-        <div class="game-box-3">3</div>
-        <div class="game-box-4">4</div>
-        <div class="game-box-5">5</div>
-        <div class="game-box-6">6</div>
-        <div class="game-box-7">7</div>
-        <div class="game-box-8">8</div>
-        <div class="game-box-9">9</div>
+        <div class="game-box-1">
+            <img src="./img/icons/icon-water.svg" alt="water symbol">
+        </div>
+        <div class="game-box-2"></div>
+        <div class="game-box-3"></div>
+        <div class="game-box-4"></div>
+        <div class="game-box-5">
+            <img src="./img/icons/icon-flame.svg" alt="flame symbol">
+        </div>
+        <div class="game-box-6"></div>
+        <div class="game-box-7"></div>
+        <div class="game-box-8"></div>
+        <div class="game-box-9"></div>
     </div>
 </body>
 </html>
