--- a/start.html
+++ b/start.html
@@ -9,13 +9,16 @@
         <link rel="stylesheet" href="./style.css">
         <link rel="stylesheet" href="./start.css">
     </head>
+
+<!-- ////////////////////////////// Start Page \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
 <body id="start-page">
-    <!-- Header for the title + logo -->
+    <!-- ////////////////////////////// Header for the title + logo \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
     <div class="header">
         <h1 id="game-title">Quench the flames</h1>
         <img src="./img/icons/icon-logo-small.svg" alt="Quench the flames logo">
     </div>
-    <!-- Pick a player -->
+
+    <!-- ////////////////////////////// Pick a player cards \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
     <div class="game-options">
         <div class="character-one card">
             <img class="icon" src="./img/icons/icon-water-small.svg" alt="water symbol">
@@ -29,9 +32,15 @@
             <p>Fire Demon</p>
         </div>
     </div>
+
+    <!-- ////////////////////////////// Start Game Button \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
     <div class="buttons">
-        <button class="start-btn">Start Game</button>
+        <a href="./game.html">
+            <button class="start-btn btn">Start Game</button>
+        </a>
     </div>
+
+    <!-- ////////////////////////////// Footer \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
     <footer>
         <p>Created with <span class="heart">&#9825;</span> by <a href="https://github.com/worthyag" target="_blank">worthyag</a> | 
             <a href="https://github.com/worthyag/quench-the-flames" target="_blank">source</a></p>
