Reformatted the directory.

--- a/game.html
+++ b/game.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quench the Flames</title>
     <link rel="icon" href="./img/icons/icon-logo-small.svg" type="image/x-icon">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./styles/game.css">
 </head>
 <!-- ////////////////////////////// Game Page \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
 <body id="game-page">
