--- a/start.html
+++ b/start.html
@@ -6,8 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Quench the Flames</title>
         <link rel="icon" href="./img/icons/icon-logo-small.svg" type="image/x-icon">
-        <link rel="stylesheet" href="./style.css">
-        <link rel="stylesheet" href="./start.css">
+        <link rel="stylesheet" href="./styles/game.css">
+        <link rel="stylesheet" href="./styles/start.css">
     </head>
 
 <!-- ////////////////////////////// Start Page \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
