Renamed the main js file.

--- a/game.html
+++ b/game.html
@@ -7,6 +7,7 @@
     <title>Quench the Flames</title>
     <link rel="icon" href="./img/icons/icon-logo-small.svg" type="image/x-icon">
     <link rel="stylesheet" href="./styles/game.css">
+    <script src="./scripts/app.js" defer></script>
 </head>
 <!-- ////////////////////////////// Game Page \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
 <body id="game-page">
