Started the functionality needed to render the game board.

--- a/game.html
+++ b/game.html
@@ -40,19 +40,19 @@
 
         <!-- ////////////////////////////// Game grid where the game will take place \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
         <div class="game-grid">
-            <div class="game-box-1">
-                <img src="./img/icons/icon-water.svg" alt="water symbol">
+            <div class="game-box-1" data-index="0">
+                <!-- <img src="./img/icons/icon-water.svg" alt="water symbol"> -->
             </div>
-            <div class="game-box-2"></div>
-            <div class="game-box-3"></div>
-            <div class="game-box-4"></div>
-            <div class="game-box-5">
-                <img src="./img/icons/icon-flame.svg" alt="flame symbol">
+            <div class="game-box-2" data-index="1"></div>
+            <div class="game-box-3" data-index="2"></div>
+            <div class="game-box-4" data-index="3"></div>
+            <div class="game-box-5" data-index="4">
+                <!-- <img src="./img/icons/icon-flame.svg" alt="flame symbol"> -->
             </div>
-            <div class="game-box-6"></div>
-            <div class="game-box-7"></div>
-            <div class="game-box-8"></div>
-            <div class="game-box-9"></div>
+            <div class="game-box-6" data-index="5"></div>
+            <div class="game-box-7" data-index="6"></div>
+            <div class="game-box-8" data-index="7"></div>
+            <div class="game-box-9" data-index="8"></div>
         </div>
 
          <!-- ////////////////////////////// Where the round number will be displayed  \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
