Completed the majority of the game functionality.

--- a/game.html
+++ b/game.html
@@ -59,8 +59,13 @@
         <div class="round">
             <p>Round <span class="round-number">1</span></p>
         </div>
-    </main>
 
+        <!-- ////////////////////////////// Where the game over msg is displayed  \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
+        <section class="display-msg hidden">
+            <h2>Game Over!</h2>
+            
+        </section>
+    </main>
     <!-- ////////////////////////////// Footer \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
     <footer>
         <p>Created with <span class="heart">&#9825;</span> by <a href="https://github.com/worthyag" target="_blank">worthyag</a> | 
